--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
         <div class="col-4">
             <app-header></app-header>
         </div>
+        <div class="col-8">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
 <app-footer></app-footer>
