Agregando Estilos, Funcionalidad de las rutas en Navbar. Y agregando Navbar y Footer

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,1 +1,37 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+        <img class="mr-1" src="" width="30" height="30" alt="">Enrique Villasana
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" routerLink="home" routerLinkActive='active'>Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="languages" routerLinkActive="active">Languages</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="skills" routerLinkActive="active">Skills</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="tools" routerLinkActive="active">Tools</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="work-experience" routerLinkActive="active">Work Experience</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="tools" routerLinkActive="active">Tools</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="extra-studies" routerLinkActive="active">Extra Studies</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="references" routerLinkActive="active">References</a>
+            </li>
+        </ul>
+    </div>
+</nav>
