--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container">
+<div class="container main-container">
     <div class="row">
         <div class="col-4">
             <app-header></app-header>
