Empezando a diseñar trajeta-Header

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<div class="card mt-3 mb-3 mr-5 ml-5">
+    <img src="assets/img/curriculum.png" class="card-img-top pl-5 pt-5 pr-5" alt="...">
+    <div class="card-body text-dark">
+        <h5 class="card-title text-center">Ing. Enrique Villasana</h5>
+        <p class="card-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, aperiam eaque beatae quod amet labore neque veritatis omnis? Reprehenderit iusto veniam, expedita quam ipsum itaque quis vero nesciunt in odio.
+        </p>
+    </div>
+</div>
