--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <app-navbar></app-navbar>
 <div class="container main-container">
     <div class="row">
-        <div class="col-4">
+        <div class="col-md">
             <app-header></app-header>
         </div>
-        <div class="col-8">
+        <div class="col-md">
             <router-outlet></router-outlet>
         </div>
     </div>
